# infinitegfx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: font.rs  lib.rs
src/backend/: mod.rs
src/core/: address_mode.rs  context.rs  error.rs  gfx_chain.rs  gfx_frame_processor.rs  gfx_param.rs  handle.rs  mod.rs
src/effects/: mod.rs  node.rs  text.rs
src/modulators/: audio.rs  envelope.rs  lfo.rs  mod.rs
src/shaders/: blend.wgsl
src/shaders/effects/: crossfade.wgsl  curtain.wgsl  fade.wgsl  flip.wgsl  glass.wgsl  glitch.wgsl  haze.wgsl  solid.wgsl  space_bend.wgsl  sparkle.wgsl  text.wgsl  warp.wgsl
tests/: readme_example.rs
